# netpeak-request-triage

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
docs/: architecture.md  schema.md
examples/: output.json  report.md
test-data/: golden.jsonl
tests/: conftest.py  test_cli.py  test_config.py  test_evaluation.py  test_extract.py  test_inbox.py  test_models.py  test_pipeline.py  test_report.py  test_schema.py  test_telegram.py
triage/: __init__.py  __main__.py  cli.py  config.py  console.py  evaluation.py  extract.py  inbox.py  models.py  pipeline.py  prompts.py  report.py  schema.py  telegram.py
