[project]
name = "netpeak-request-triage"
version = "0.1.0"
description = "LLM classification of a free-form request inbox into a strict, validated schema."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
  "anthropic==0.109.2",
  "pydantic==2.13.4",
  "pydantic-settings==2.14.1",
  "httpx==0.28.1",
  "truststore==0.10.4",
]

[project.optional-dependencies]
dev = [
  "ruff==0.15.17",
  "mypy==2.1.0",
  "pytest==9.1.0",
  "pytest-cov==7.1.0",
]

[project.scripts]
triage = "triage.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["triage*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
exclude = ["^tests/", "^eval/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
